--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,10 @@
 {
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+  "version": 2,
+  "builds": [
+    { "src": "vite.config.js", "use": "@vercel/node" },
+    { "src": "index.html", "use": "@vercel/static" }
   ],
   "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
-  "errorOverrides": [
-    {
-      "statusCode": 404,
-      "rewrite": "/index.html"
-    }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
