--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "vite.config.js", "use": "@vercel/node" },
-    { "src": "index.html", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
